# UBST2508_Scheduler

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
android/: AndroidManifest.xml
android/res/xml/: qtprovider_paths.xml
assets/icons/: app_icon.icns
src/core/: appcore.cpp  appcore.h  constants.h  entityfactory.cpp  entityfactory.h  networkservice.cpp  networkservice.h  typedefs.h
src/entities/: commonTypes.h  day.cpp  day.h  deadline.cpp  deadline.h  lesson.cpp  lesson.h  subject.cpp  subject.h
src/models/: daylistmodel.cpp  daylistmodel.h  deadlinelistmodel.cpp  deadlinelistmodel.h  filelistmodel.cpp  filelistmodel.h  schedulelistmodel.cpp  schedulelistmodel.h
src/tests/: testdatagenerator.cpp  testdatagenerator.h
ui/components/: BasePopup.qml  CalendarView.qml  DayBoard.qml  DeadlineCard.qml  DeadlinePopup.qml  FileCard.qml  HeaderButton.qml  LessonCard.qml  NavigationButton.qml  SegmentedToggle.qml  SettingsButton.qml  SettingsDescription.qml  SettingsPopup.qml  SubjectDeadlinesPopup.qml  SubjectPopup.qml
ui/pages/: DeadlinesPage.qml  SchedulePage.qml
ui/theme/: Theme.qml
